# deskPet

./: CMakeLists.txt  CMakeUserPresets.json  README.md  main.cpp  mainWindow.cpp  mainWindow.h  mainWindow.ui  res.h  videoByFrame.cpp  videoByFrame.h
